nav bar fix, noticed i had it messed up

--- a/plinth.html
+++ b/plinth.html
@@ -12,7 +12,7 @@
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="spur.html">The Spur</a></li>
-        <li><a href="plinth.html">The PLinth</a></li>
+        <li><a href="plinth.html">The Plinth</a></li>
     </ul>
 </nav>
         </header>
