--- a/spur.html
+++ b/spur.html
@@ -11,8 +11,8 @@
         <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="spur.html">Spur</a></li>
-        <li><a href="plinth.html">Plinth</a></li>
+        <li><a href="spur.html">The Spur</a></li>
+        <li><a href="plinth.html">The Plinth</a></li>
     </ul>
 </nav>
         </header>
