--- a/spur.html
+++ b/spur.html
@@ -20,7 +20,7 @@
 
         <article>
 <h2>The Spur</h2>
-The Spur, the last section of the High Line that extends east along 30th St. and terminates above 10th Ave., opened in June 2019. This section features a large-scale plaza for public programming and art, areas for seating and gathering, and two oversized “tilted” planters that will feature a lush, immersive woodland environment.
+The Spur, the last section of the High Line that extends east along 30th St. and terminates above 10th Ave., opened in June 2019. This section features a large-scale plaza for public programming and art, areas for seating and gathering, and two oversized “tilted” planters that will feature a lush, immersive woodland environment!
         </article>
 
         <footer>
